# arteryMono

./: .gitignore  .gitmodules  CMakeLists.txt
CMakeTools/: AddNewLibs.cmake  FlashTarget.cmake  HexBinMapCommand.cmake  VisibilityHead.cmake
ConfigAndSettings/FreeRtos/: FreeRTOSConfig.h
ConfigAndSettings/lwip/: lwipopts.h
ConfigAndSettings/lwip/hEmac/: at32_emac.c  at32_emac.h  netconf.c  netconf.h
ConfigAndSettings/lwip/memalign/: CusnomMem.c  CustomMem.h
ConfigAndSettings/lwip/port/: ethernetif.c  sys_arch.c
ConfigAndSettings/lwip/port/arch/: cc.h  lwippools.h  readme.txt
GitHubLibs/CMakeTools/: FreeRTOSconf.cmake  LWIPconf.cmake  PlatformArteryTools.cmake
IntLib/: InternLibConf.cmake
IntLib/ethernet/AT437_435/hEmac/: at32_emac.c  netconf.c
NewLibs/: newLibs.c  newLibs.h
Platform/ArteryTec/: PlatformArteryCMSIS.cmake
Platform/ArteryTec/AT_437-435/: clockGen.APCC
Platform/ArteryTec/AT_437-435/src/: at32f435_437_clock.c
main/: main.c  main.h
